--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <!-- content -->
             <div class="p-10 text-center flex items-center flex-col">
               <h2 class="text-2xl text-Dark-blue font-bold text-center mb-2">Order Summary</h2>
-              <p class="text-md text-Desaturated-blue font-normal max-w-xs text-center mb-7">
+              <p class="text-md text-Desaturated-blue font-normal max-w-xs text-center mb-7 leading-3">
                 You can now listen to millions of songs, audiobooks, and podcasts on any 
                 device anywhere you like!
               </p>
